--- a/views/v.html
+++ b/views/v.html
@@ -73,13 +73,14 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>-->
-        <h3 class="muted">GVine</h3>
+        <h3 class="muted"><a href="/">GVine</a></h3>
       </div>
 
       <hr>
 
       <div class="result">
         <p class="lead">Animated GIF of the Vine video</p>
+        <p class="lead">Wait until it converts... the first time can take up to 30 seconds.</p>
         <img src="/gif/<%= id %>" alt="Animated GIF from a Vine video" id="gvine-image" />
         <p class="urls">Vine: <a id="vine-url" href="https://vine.co/v/<%= id %>">https://vine.co/v/<%= id %></a> – GVine: <a id="gvine-url" href="/v/<%= id %>">http://gvine.co/v/<%= id %></a></p>
       </div>
