--- a/views/layout.jade
+++ b/views/layout.jade
@@ -53,6 +53,14 @@ html(lang='en')
         .marketing p + h4 {
         margin-top: 28px;
         }
+    script
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-1022782-15', 'gvine.co');
+      ga('send', 'pageview');
 
   body
     .container-narrow
