--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,59 +8,8 @@ html(lang='en')
       meta(name='author', content='Jordi Romero')
 
       link(href='/bootstrap.min.css', rel='stylesheet')
-      style(type='text/css')
-        body {
-        padding-top: 20px;
-        padding-bottom: 40px;
-        }
-        .result {
-        text-align: center;
-        margin-bottom: 50px;
-        }
-        .result .urls {
-        margin-top: 10px;
-        }
-        /* Custom container */
-        .container-narrow {
-        margin: 0 auto;
-        max-width: 700px;
-        }
-        .container-narrow > hr {
-        margin: 50px 0;
-        }
-        /* Main marketing message and sign up button */
-        .jumbotron {
-        margin: 60px 0;
-        text-align: center;
-        }
-        .jumbotron h1 {
-        font-size: 72px;
-        line-height: 1;
-        }
-        .jumbotron .btn {
-        font-size: 21px;
-        padding: 14px 24px;
-        }
-        .jumbotron input {
-        padding: 14px;
-        margin: 0 20px;
-        font-size: 1.3em;
-        }
-        /* Supporting marketing content */
-        .marketing {
-        margin: 60px 0;
-        }
-        .marketing p + h4 {
-        margin-top: 28px;
-        }
-        ul.social {
-          width: 150px;
-          margin-left: 0;
-          list-style: none;
-        }
+      link(href='/app.css', rel='stylesheet')
 
-        ul.social li {
-        }
     script
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
