add YanoneHolman font

--- a/public/app.less
+++ b/public/app.less
@@ -1,6 +1,5 @@
 body {
-}
-body {
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   padding-top: 20px;
   padding-bottom: 40px;
 }
@@ -22,7 +21,7 @@ margin: 50px 0;
 /* Main marketing message and sign up button */
 .jumbotron {
 margin: 60px 0;
-        text-align: center;
+text-align: center;
 }
 .jumbotron h1 {
   font-size: 72px;
