--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,7 @@ html(lang='en')
       link(href='/bootstrap.min.css', rel='stylesheet')
       link(href='/app.css', rel='stylesheet')
 
+      link(href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,300,200,700', rel='stylesheet', type='text/css')
     script
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
