--- a/public/app.less
+++ b/public/app.less
@@ -1,23 +1,58 @@
-body {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
-  padding-top: 20px;
-  padding-bottom: 40px;
+//normalize from necolas
+@import "normalize";
+
+// Variables
+@green: #00b489;
+@red: #d55032;
+@dark: #19141f;
+@white: #fff;
+@main-font: 'Yanone Kaffeesatz', sans-serif;
+
+// Mixins
+/*---------------------------------------------------
+    LESS Elements 0.9
+  ---------------------------------------------------
+    A set of useful LESS mixins
+    More info at: http://lesselements.com
+  ---------------------------------------------------*/
+.linear-gradient( @dir: top, @start-color: #eee, @end-color: #aaa ) {
+  background: -webkit-linear-gradient(@dir, @start-color 0%, @end-color 100%);
+  background: -moz-linear-gradient(@dir, @start-color 0%, @end-color 100%);
+  background: -ms-linear-gradient(@dir, @start-color 0%, @end-color 100%);
+  background: -o-linear-gradient(@dir, @start-color 0%, @end-color 100%);
+  background: linear-gradient(@dir, @start-color 0%, @end-color 100%);
+  //.linear-gradient-ie( @dir, @start-color, @end-color);
 }
+
+.container-narrow   { margin: 0 auto; max-width: 700px;
+  > hr              { margin: 50px 0; }
+}
+
+body {
+  font-family: @main-font;
+  color: @white;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+}
+
+.header{
+  .linear-gradient(150deg,  @green, @red);
+}
+
+.footer{
+  background-color: @dark;
+  padding: 6em 0;
+  text-align: center;
+}
+
 .result {
   text-align: center;
-  margin-bottom: 50px;
 }
-.result .urls {
-  margin-top: 10px;
+.urls {
+  padding-top: 2em;
+  padding-bottom: 2em;
 }
-/* Custom container */
-.container-narrow {
-margin: 0 auto;
-        max-width: 700px;
-}
-.container-narrow > hr {
-margin: 50px 0;
-}
+
 /* Main marketing message and sign up button */
 .jumbotron {
 margin: 60px 0;
@@ -38,16 +73,13 @@ margin: 0 20px;
 }
 /* Supporting marketing content */
 .marketing {
-margin: 60px 0;
+  margin: 60px 0;
 }
 .marketing p + h4 {
   margin-top: 28px;
 }
 ul.social {
-width: 150px;
-       margin-left: 0;
-       list-style: none;
-}
-
-ul.social li {
+  width: 150px;
+  margin-left: 0;
+  list-style: none;
 }
