--- a/public/app.less
+++ b/public/app.less
@@ -24,7 +24,7 @@
   //.linear-gradient-ie( @dir, @start-color, @end-color);
 }
 
-.container-narrow   { margin: 0 auto; max-width: 700px;
+.container-narrow   { margin: 0 auto; max-width: 700px; text-align: center;
   > hr              { margin: 50px 0; }
 }
 
@@ -42,35 +42,34 @@ body {
 .footer{
   background-color: @dark;
   padding: 6em 0;
-  text-align: center;
 }
 
-.result {
-  text-align: center;
-}
 .urls {
   padding-top: 2em;
   padding-bottom: 2em;
 }
 
 /* Main marketing message and sign up button */
+
 .jumbotron {
-margin: 60px 0;
-text-align: center;
+  margin: 60px 0;
 }
+
 .jumbotron h1 {
   font-size: 72px;
   line-height: 1;
 }
 .jumbotron .btn {
   font-size: 21px;
-padding: 14px 24px;
+  padding: 14px 24px;
 }
+
 .jumbotron input {
-padding: 14px;
-margin: 0 20px;
-        font-size: 1.3em;
+  padding: 14px;
+  margin: 0 20px;
+  font-size: 1.3em;
 }
+
 /* Supporting marketing content */
 .marketing {
   margin: 60px 0;
