--- a/public/app.less
+++ b/public/app.less
@@ -103,6 +103,21 @@ body {
   padding: 6em 0;
 }
 
+.logo{
+  background-image: url("logo.png");
+  background-repeat: no-repeat;
+  background-position: center 75%;
+  background-color: fadeout(#000, 80%);
+  border-radius: 0 0 10px 10px;
+  border-bottom: 5px solid @dark;
+  display: block;
+  width: 150px;
+  height: 100px;
+  text-indent: -9999em;
+  margin: 0 auto;
+  padding-top: 2em;
+  padding-bottom: 1em;
+}
 .urls {
   padding-top: 2em;
   padding-bottom: 2em;
