--- a/public/app.less
+++ b/public/app.less
@@ -60,7 +60,8 @@
 
 .container-narrow {
   margin: 0 auto;
-  max-width: 700px;
+  max-width: 750px;
+  padding: 0 20px;
   text-align: center;
   position: relative;
   z-index: 9999;
