--- a/views/layout.jade
+++ b/views/layout.jade
@@ -39,7 +39,7 @@ html(lang='en')
     .footer
       .container-narrow
         .jordi-profile
-          img(src="jrom-profile.jpeg", alt='Jordi Romero')
+          img(src="/jrom-profile.jpeg", alt='Jordi Romero')
           h3 &copy;
             b Jordi Romero 2013
           .twiter-follow
