--- a/views/layout.jade
+++ b/views/layout.jade
@@ -52,4 +52,6 @@ html(lang='en')
           a(href="https://twitter.com/josep_martins") @josep_martins
 
     script(src='/jquery.min.js')
+    script.
+      !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
     block scripts
