--- a/views/layout.jade
+++ b/views/layout.jade
@@ -46,6 +46,9 @@ html(lang='en')
             a.twitter-follow-button(href="https://twitter.com/jordiromero", data-show-count="false", data-show-screen-name="false", data-dnt="true") Follow @jordiromero
           p GVine is a fun project created by Jordi Romero and is not associated with or endorsed by Vine or Twitter.
           p Also, this has nothing to do with the gin with that name, although it's a really good gin.
+          p
+            | This website is open-source and available at 
+            a(href="https://github.com/jrom/gvine") github.com/jrom/gvine
 
         span.designed_by
           | Designed by
