--- a/public/app.less
+++ b/public/app.less
@@ -140,19 +140,16 @@ body {
   background-image: url("logo.png");
   background-repeat: no-repeat;
   background-position: center 75%;
-  background-color: fadeout(#000, 80%);
-  border-radius: 0 0 10px 10px;
-  border-bottom: 5px solid @dark;
   display: block;
   width: 150px;
   height: 100px;
   text-indent: -9999em;
   margin: 0 auto;
-  padding-top: 2em;
+  padding-top: 3em;
   padding-bottom: 1em;
 }
 .urls {
-  padding-top: 2em;
+  padding-top: 20px;
   padding-bottom: 2em;
 }
 
