refactoring footer, part 1

--- a/public/app.less
+++ b/public/app.less
@@ -254,18 +254,22 @@ ul.social {
   }
 }
 
-.jordi-profile{
+.jordi-profile,
+.jmartins-profile {
   margin-bottom: 4em;
   img{
   width: 100px;
   height: 100px;
   border-radius: 50%;
   }
+}
+.main-description{
   p{
     font-size: 1.4em;
     font-weight: 300;
   }
 }
+
 .twiter-follow{
   margin-bottom: 1em;
 }
