refactoring index page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -52,7 +52,11 @@ html(lang='en')
               a.twitter-follow-button(href="https://twitter.com/josep_martins", data-show-count="false", data-show-screen-name="false", data-dnt="true") Follow @josep_martins
         .span12.main-description
           p GVine is a fun project created by Jordi Romero and is not associated with or endorsed by Vine or Twitter.
-          p.lead Also, this has nothing to do with the gin with that name, although it's a really good gin.
+          p Also, this has nothing to do with the gin with that name, although it's a really good gin.
+          p.lead
+            | This website is open-source and available at 
+            a(href="https://github.com/jrom/gvine") github.com/jrom/gvine
+
         .span12.copy
           small GVine 2013
     script(src='/jquery.min.js')
