footer refactor, part 2

--- a/public/app.less
+++ b/public/app.less
@@ -358,6 +358,15 @@ ul.social {
   }  
 }
 
+// Base scaffold
+a{
+  color: @red2;
+  &:hover{
+    text-decoration: none;
+    color: @red;
+  }
+}
+
 // Centering rows
 .center-row{
   float: none !important;
