--- a/public/app.less
+++ b/public/app.less
@@ -131,11 +131,6 @@ body {
   background-image: url("bg.gif");
 }
 
-.footer{
-  background-color: @dark;
-  padding: 6em 0;
-}
-
 .logo{
   background-image: url("logo.png");
   background-repeat: no-repeat;
@@ -253,38 +248,50 @@ ul.social {
     width: 90px;
   }
 }
+.footer{
+  background-color: @dark;
+  padding: 1em 0;
+}
+
+.profiles{
+  .lead{
+    font-family: Georgia, serif;
+    font-size: 14px;
+    font-style: italic;
+    color: #aaa;
+    margin-bottom: 2
+  }
+  .pre{
+    font-weight: 100;
+    font-size: 16px;
+    margin-right: 5px;
+  }
+  .copy{
+    color: #666;
+    margin-top: 4em;
+  }
+}
 
 .jordi-profile,
 .jmartins-profile {
-  margin-bottom: 4em;
+  margin-bottom: 2em;
+  margin-top: 5em;
   img{
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
   }
 }
 .main-description{
+  border-top: 1px solid #333;
+  padding-top: 3em;
   p{
     font-size: 1.4em;
-    font-weight: 300;
   }
 }
 
 .twiter-follow{
   margin-bottom: 1em;
-}
-.designed_by{
-  font-size: 1.125em;
-  font-weight: 100;
-  a{
-    font-weight: 500;
-    margin-left: 0.5em;
-    color: @green;
-    &:hover{
-      text-decoration: none;
-      color: @red;
-    }
-  }
 }
 
 .vine-link, .gvine-link{
@@ -300,18 +307,17 @@ ul.social {
     color: @green2;
   }  
 }
-#gvine-url{
-  color: @red2;
-  margin-left: 0.25em;
-  &:hover{
-    text-decoration: none;
-    color: @red;
-  }
-}
+
+// Base scaffold
 a{
   color: @red2;
   &:hover{
     text-decoration: none;
     color: @red;
   }
+}
+// Centering rows
+.center-row{
+  float: none !important;
+  margin: 0 auto !important;
 }
