--- a/views/layout.jade
+++ b/views/layout.jade
@@ -56,4 +56,9 @@ html(lang='en')
         .span12.copy
           small GVine 2013
     script(src='/jquery.min.js')
+    script
+        var polyfilter_scriptpath = '/';
+    script(src='/cssParser.js')
+    script(src='/css-filters-polyfill.js')      
+    script(src='/css_browser_selector.js')      
     block scripts
