--- a/views/layout.jade
+++ b/views/layout.jade
@@ -66,4 +66,9 @@ html(lang='en')
     script(src='/css_browser_selector.js')      
     script.
       !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+    script
+        var polyfilter_scriptpath = '/';
+    script(src='/cssParser.js')
+    script(src='/css-filters-polyfill.js')      
+    script(src='/css_browser_selector.js')      
     block scripts
