--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,8 @@ html(lang='en')
       meta(name='viewport', content='width=device-width, initial-scale=1.0')
       meta(name='description', content='Create animated gifs from vine videos')
       meta(name='author', content='Jordi Romero')
+      meta(property="og:image", content="http://gvine.co/jrom-profile.jpeg")
+
 
       link(href='/bootstrap.min.css', rel='stylesheet')
       link(href='/app.css', rel='stylesheet')
